2014-09-15  Michael Saboff  <msaboff@apple.com>

        Create a JSCallee for GlobalExec object
        https://bugs.webkit.org/show_bug.cgi?id=136840

        Reviewed by Geoffrey Garen.

        Added m_globalCallee, initialized it and then used it to set the globalExec's callee.

        * runtime/JSGlobalObject.cpp:
        (JSC::JSGlobalObject::init):
        (JSC::JSGlobalObject::visitChildren):
        * runtime/JSGlobalObject.h:

2014-09-14  Filip Pizlo  <fpizlo@apple.com>

        DFG ref count calculation should be reusable
        https://bugs.webkit.org/show_bug.cgi?id=136811

        Reviewed by Oliver Hunt.
        
        Henceforth if you call Graph::computeRefCounts(), a nifty O(n) operation, every Node
        will be able to tell you how many places it is used from. Currently only DCE uses this,
        but it will be useful for https://bugs.webkit.org/show_bug.cgi?id=136330.

        * dfg/DFGDCEPhase.cpp:
        (JSC::DFG::DCEPhase::run):
        (JSC::DFG::DCEPhase::findTypeCheckRoot): Deleted.
        (JSC::DFG::DCEPhase::countNode): Deleted.
        (JSC::DFG::DCEPhase::countEdge): Deleted.
        * dfg/DFGGraph.cpp:
        (JSC::DFG::Graph::computeRefCounts):
        * dfg/DFGGraph.h:

2014-09-12  Michael Saboff  <msaboff@apple.com>

        Merge JSGlobalObject::reset() into ::init()
        https://bugs.webkit.org/show_bug.cgi?id=136800

        Reviewed by Oliver Hunt.

        Moved the contents of reset() into init().
        Note that the diff shows more changes.

        * runtime/JSGlobalObject.cpp:
        (JSC::JSGlobalObject::init): Moved body of reset() into init.
        (JSC::JSGlobalObject::put):
        (JSC::JSGlobalObject::defineOwnProperty):
        (JSC::JSGlobalObject::addGlobalVar):
        (JSC::JSGlobalObject::addFunction):
        (JSC::lastInPrototypeChain):
        (JSC::JSGlobalObject::reset): Deleted.
        * runtime/JSGlobalObject.h:

2014-09-12  Michael Saboff  <msaboff@apple.com>
