@@ -1,3 +1,12 @@
+2014-09-16  Csaba Osztrogonác  <ossy@webkit.org>
+
+        JSC test gardening
+        https://bugs.webkit.org/show_bug.cgi?id=136823
+
+        Reviewed by Geoffrey Garen.
+
+        * tests/mozilla/mozilla-tests.yaml: Unskip passing tests.
+
 2014-09-15  Michael Saboff  <msaboff@apple.com>
 
         Create a JSCallee for GlobalExec object
